# MechInt

./: .gitignore  2201.02177v1.md  CLAUDE.md  Cargo.toml  PROGRESS.txt  PROMPT.md  README.md  claude-iteration-0.jsonl  claude-iteration-1.jsonl  claude-iteration-2.jsonl  claude-iteration-3.jsonl  claude-iteration-4.jsonl  claude-iteration-5.jsonl  claude-iteration-6.jsonl  claude-iteration-7.jsonl  generate_figures.rs  ralph-wiggums-codex-loop.sh  ralph-wiggums-loop.sh  test_surface.json  visualize_embeddings.rs
.beads/: issues.jsonl
artifacts/checkpoint/: model-24.mpk  model-25.mpk  model-3.mpk  model-80.mpk  model-81.mpk  optim-24.mpk  optim-25.mpk  optim-3.mpk  optim-80.mpk  optim-81.mpk  scheduler-81.mpk
docs/: FOURIER_VERIFICATION.md  NOTES.md  section_5.5_scope_decision.md
examples/: inference.rs
scripts/: README.md  analyze_weight_decay_sweep.py  plot_sweep_comparison.py  sweep_weight_decay.sh  verify_fourier_structure.sh  visualize_activation_surface.py
src/: analysis.rs  checkpoint.rs  data.rs  export.rs  lib.rs  main.rs  model.rs  plotting.rs  training.rs  training_config.rs  verify.rs
tests/: integration_test.rs
