[package]
name = "grokking"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grokking"
path = "src/main.rs"

[[bin]]
name = "generate_figures"
path = "generate_figures.rs"

[[bin]]
name = "visualize_embeddings"
path = "visualize_embeddings.rs"

[dependencies]
burn = { version = "0.20.0-pre.6", default-features = false, features = ["std", "tui", "train", "wgpu", "autodiff", "ndarray"] }
rand = "0.8"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"
image = "0.24"
imageproc = "0.23"
ctrlc = "3.4"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1.5"
